// Vitest Snapshot v1

exports[`Paginator.vue > matches snapshot when currentPage > totalPages - threshold + 1 1`] = `
"<nav class=\\"paginator\\" aria-label=\\"Page navigation\\">
  <div class=\\"btn-toolbar\\" role=\\"toolbar\\">
    <div class=\\"mr-2 btn-group\\"><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"First\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M11 19l-7-7 7-7m8 14l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">First</span></button><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Prev\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M15 19l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">Prev</span></button></div>
    <div class=\\"hidden btn-group md:block\\"><button class=\\"btn btn-default btn\\" disabled=\\"false\\">1</button><button class=\\"btn btn-default shadow-none border-transparent btn\\" disabled=\\"true\\">...</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">11</button><button class=\\"btn btn-default active btn\\" disabled=\\"false\\">12</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">13</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">14</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">15</button></div>
    <div class=\\"block mx-0 currentPageLabelContainer btn-group md:hidden\\"><span class=\\"inline-block px-3 pt-2 currentPageLabel\\"> Page 12</span></div>
    <div class=\\"ml-2 btn-group\\"><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Next\\"><span class=\\"sr-only sm:not-sr-only\\">Next</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M9 5l7 7-7 7\\" />
        </svg></button><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Last\\"><span class=\\"sr-only sm:not-sr-only\\">Last</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M13 5l7 7-7 7M5 5l7 7-7 7\\" />
        </svg></button></div>
  </div>
</nav>"
`;

exports[`Paginator.vue > matches snapshot when threshold is >= totalPages prop 1`] = `
"<nav class=\\"paginator\\" aria-label=\\"Page navigation\\">
  <div class=\\"btn-toolbar\\" role=\\"toolbar\\">
    <div class=\\"mr-2 btn-group\\"><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"First\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M11 19l-7-7 7-7m8 14l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">First</span></button><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Prev\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M15 19l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">Prev</span></button></div>
    <div class=\\"hidden btn-group md:block\\"><button class=\\"btn btn-default active btn\\" disabled=\\"false\\">1</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">2</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">3</button></div>
    <div class=\\"block mx-0 currentPageLabelContainer btn-group md:hidden\\"><span class=\\"inline-block px-3 pt-2 currentPageLabel\\"> Page 1</span></div>
    <div class=\\"ml-2 btn-group\\"><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Next\\"><span class=\\"sr-only sm:not-sr-only\\">Next</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M9 5l7 7-7 7\\" />
        </svg></button><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Last\\"><span class=\\"sr-only sm:not-sr-only\\">Last</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M13 5l7 7-7 7M5 5l7 7-7 7\\" />
        </svg></button></div>
  </div>
</nav>"
`;

exports[`Paginator.vue > matches snapshot with currentPage and totalPages prop assigned 1`] = `
"<nav class=\\"paginator\\" aria-label=\\"Page navigation\\">
  <div class=\\"btn-toolbar\\" role=\\"toolbar\\">
    <div class=\\"mr-2 btn-group\\"><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"First\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M11 19l-7-7 7-7m8 14l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">First</span></button><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Prev\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M15 19l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">Prev</span></button></div>
    <div class=\\"hidden btn-group md:block\\"><button class=\\"btn btn-default btn\\" disabled=\\"false\\">1</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">2</button><button class=\\"btn btn-default active btn\\" disabled=\\"false\\">3</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">4</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">5</button><button class=\\"btn btn-default shadow-none border-transparent btn\\" disabled=\\"true\\">...</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">10</button></div>
    <div class=\\"block mx-0 currentPageLabelContainer btn-group md:hidden\\"><span class=\\"inline-block px-3 pt-2 currentPageLabel\\"> Page 3</span></div>
    <div class=\\"ml-2 btn-group\\"><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Next\\"><span class=\\"sr-only sm:not-sr-only\\">Next</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M9 5l7 7-7 7\\" />
        </svg></button><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Last\\"><span class=\\"sr-only sm:not-sr-only\\">Last</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M13 5l7 7-7 7M5 5l7 7-7 7\\" />
        </svg></button></div>
  </div>
</nav>"
`;

exports[`Paginator.vue > matches snapshot with currentPage, threshold, loading, and totalPages prop assigned 1`] = `
"<nav class=\\"paginator\\" aria-label=\\"Page navigation\\">
  <div class=\\"btn-toolbar\\" role=\\"toolbar\\">
    <div class=\\"mr-2 btn-group\\"><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"First\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M11 19l-7-7 7-7m8 14l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">First</span></button><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Prev\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M15 19l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">Prev</span></button></div>
    <div class=\\"hidden btn-group md:block\\"><button class=\\"btn btn-default btn\\" disabled=\\"true\\">1</button><button class=\\"btn btn-default shadow-none border-transparent btn\\" disabled=\\"true\\">...</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">13</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">14</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">15</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">16</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">17</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">18</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">19</button><button class=\\"btn btn-default active btn\\" disabled=\\"true\\">20</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">21</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">22</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">23</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">24</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">25</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">26</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">27</button><button class=\\"btn btn-default shadow-none border-transparent btn\\" disabled=\\"true\\">...</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">100</button></div>
    <div class=\\"block mx-0 currentPageLabelContainer btn-group md:hidden\\"><span class=\\"inline-block px-3 pt-2 currentPageLabel\\"> Page 20</span></div>
    <div class=\\"ml-2 btn-group\\"><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Next\\"><span class=\\"sr-only sm:not-sr-only\\">Next</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M9 5l7 7-7 7\\" />
        </svg></button><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Last\\"><span class=\\"sr-only sm:not-sr-only\\">Last</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M13 5l7 7-7 7M5 5l7 7-7 7\\" />
        </svg></button></div>
  </div>
</nav>"
`;

exports[`Paginator.vue > matches snapshot with loading and totalPages prop assigned 1`] = `
"<nav class=\\"paginator\\" aria-label=\\"Page navigation\\">
  <div class=\\"btn-toolbar\\" role=\\"toolbar\\">
    <div class=\\"mr-2 btn-group\\"><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"First\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M11 19l-7-7 7-7m8 14l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">First</span></button><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Prev\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M15 19l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">Prev</span></button></div>
    <div class=\\"hidden btn-group md:block\\"><button class=\\"btn btn-default active btn\\" disabled=\\"true\\">1</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">2</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">3</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">4</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">5</button><button class=\\"btn btn-default shadow-none border-transparent btn\\" disabled=\\"true\\">...</button><button class=\\"btn btn-default btn\\" disabled=\\"true\\">10</button></div>
    <div class=\\"block mx-0 currentPageLabelContainer btn-group md:hidden\\"><span class=\\"inline-block px-3 pt-2 currentPageLabel\\"> Page 1</span></div>
    <div class=\\"ml-2 btn-group\\"><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Next\\"><span class=\\"sr-only sm:not-sr-only\\">Next</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M9 5l7 7-7 7\\" />
        </svg></button><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Last\\"><span class=\\"sr-only sm:not-sr-only\\">Last</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M13 5l7 7-7 7M5 5l7 7-7 7\\" />
        </svg></button></div>
  </div>
</nav>"
`;

exports[`Paginator.vue > matches snapshot with no props assigned 1`] = `"<!--v-if-->"`;

exports[`Paginator.vue > matches snapshot with threshold and totalPages prop assigned 1`] = `
"<nav class=\\"paginator\\" aria-label=\\"Page navigation\\">
  <div class=\\"btn-toolbar\\" role=\\"toolbar\\">
    <div class=\\"mr-2 btn-group\\"><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"First\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M11 19l-7-7 7-7m8 14l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">First</span></button><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Prev\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M15 19l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">Prev</span></button></div>
    <div class=\\"hidden btn-group md:block\\"><button class=\\"btn btn-default active btn\\" disabled=\\"false\\">1</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">2</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">3</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">4</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">5</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">6</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">7</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">8</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">9</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">10</button><button class=\\"btn btn-default shadow-none border-transparent btn\\" disabled=\\"true\\">...</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">100</button></div>
    <div class=\\"block mx-0 currentPageLabelContainer btn-group md:hidden\\"><span class=\\"inline-block px-3 pt-2 currentPageLabel\\"> Page 1</span></div>
    <div class=\\"ml-2 btn-group\\"><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Next\\"><span class=\\"sr-only sm:not-sr-only\\">Next</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M9 5l7 7-7 7\\" />
        </svg></button><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Last\\"><span class=\\"sr-only sm:not-sr-only\\">Last</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M13 5l7 7-7 7M5 5l7 7-7 7\\" />
        </svg></button></div>
  </div>
</nav>"
`;

exports[`Paginator.vue > matches snapshot with totalPages prop assigned 1`] = `
"<nav class=\\"paginator\\" aria-label=\\"Page navigation\\">
  <div class=\\"btn-toolbar\\" role=\\"toolbar\\">
    <div class=\\"mr-2 btn-group\\"><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"First\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M11 19l-7-7 7-7m8 14l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">First</span></button><button disabled=\\"true\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Prev\\"><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M15 19l-7-7 7-7\\" />
        </svg><span class=\\"sr-only sm:not-sr-only\\">Prev</span></button></div>
    <div class=\\"hidden btn-group md:block\\"><button class=\\"btn btn-default active btn\\" disabled=\\"false\\">1</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">2</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">3</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">4</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">5</button><button class=\\"btn btn-default shadow-none border-transparent btn\\" disabled=\\"true\\">...</button><button class=\\"btn btn-default btn\\" disabled=\\"false\\">10</button></div>
    <div class=\\"block mx-0 currentPageLabelContainer btn-group md:hidden\\"><span class=\\"inline-block px-3 pt-2 currentPageLabel\\"> Page 1</span></div>
    <div class=\\"ml-2 btn-group\\"><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Next\\"><span class=\\"sr-only sm:not-sr-only\\">Next</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M9 5l7 7-7 7\\" />
        </svg></button><button disabled=\\"false\\" class=\\"flex space-x-1 btn btn-default\\" title=\\"Last\\"><span class=\\"sr-only sm:not-sr-only\\">Last</span><svg class=\\"w-4 h-4 my-auto\\" fill=\\"none\\" stroke=\\"currentColor\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"3\\" d=\\"M13 5l7 7-7 7M5 5l7 7-7 7\\" />
        </svg></button></div>
  </div>
</nav>"
`;
